[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.98",
    "fastapi>=0.129.0",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "retina-face>=0.0.17",
    "sqlalchemy>=2.0.46",
    "tf-keras>=2.20.1",
    "uvicorn>=0.40.0",
]
